--- a/cjmonet/src/assets/css/nav.css
+++ b/cjmonet/src/assets/css/nav.css
@@ -1,4 +1,4 @@
-#headerNav {
+#header {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -6,10 +6,11 @@
     width: 100vw;
     flex-wrap: wrap;
     margin-top: 10px;
+    column-gap: 2vw;
 }
-#headerNav > div > a {
+#header > div > a {
     transition: all .3s;
 }
-#headerNav > div:hover > a {
+#header > div:hover > a {
     color: green;
 }
